--- a/vite-express-project/src/client/index.css
+++ b/vite-express-project/src/client/index.css
@@ -1,71 +1,93 @@
-body {
+#container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-}
-
-body > div {
-  width: 50%;
+  width: 70%;
   height: 40%;
-  display: flex;
   flex-direction: column;
+  top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+  position: absolute;
 }
 
-div > div:first-child {
+#container > div {
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
-  height: 40px;
+  width: 100%;
 }
 
-h3 {
-  width: 50%;
+h3, button {
+  background-color: rgb(160,188,213);
   text-align: center;
   line-height: 40px;
-  border-radius: 5px;
   margin: 0;
-  transition:  0.2s ease-in-out, border 0.2s ease-in-out;
+  color: rgb(14,24,32);
+  border-radius: 10px;
+  border: solid rgb(94, 94, 193) 1px;
+  transition: 0.2s ease-in-out, border 0.2s ease-in-out;
+}
+
+h3{
+  width: 49%;
+}
+
+button{
+  width: 50%;
+  font-weight:bolder;
 }
 
 .dark {
-  background-color: black;
+  background-color: rgb(184,199,208);
   color: white;
 }
 
-.light:hover
-{
-  background-color: #484849;
+.light:hover, button:hover{
+  background-color: rgb(184,199,208);
   color: white;
-}
-
-button {
-  text-align: center;
-  padding: 10px;
-  width: 100%;
-  background-color: black;
-  color: white;
-  border-radius: 5px;
-  transition: background 0.2s ease-in-out, border 0.2s ease-in-out;
-}
-
-button:hover {
-  background: #484849;
 }
 
 form > input {
   width: 100%;
-  border-color: white white grey;
-  border-style: solid;
+  border: 1px solid rgb(94, 94, 193);
   padding: 10px;
   box-sizing: border-box;
   font-size: medium;
+  border-radius: 10px;
 }
 
-#forForm, form {
+#forForm,
+form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   height: 100%;
+  width: 100%;
+  align-items: center;
+}
+
+body {
+  background-color: rgb(214,215,212);
+  width: 100vw;
+  margin: 0;
+  height: 100vh;
+}
+
+header {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgb(182,197,205);
+  opacity: 1;
+  z-index: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+img{
+  width: 100px;
 }
