--- a/vite-express-project/src/client/styles/index.css
+++ b/vite-express-project/src/client/styles/index.css
@@ -30,7 +30,9 @@ button {
   color: rgb(14, 24, 32);
   border-radius: 10px;
   border: solid rgb(94, 94, 193) 1px;
-  transition: 0.2s ease-in-out, border 0.2s ease-in-out;
+  transition:
+    0.2s ease-in-out,
+    border 0.2s ease-in-out;
 }
 
 h3 {
@@ -92,6 +94,6 @@ header {
   justify-content: center;
 }
 
-header> img {
+header > img {
   width: 100px;
 }
